# PantherSDK

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  ROADMAP.md  TODO.md  cbindgen.toml  docker-compose.monitoring.yml  docker-compose.yml  lastUpdates.md  panther_features.yaml
.github/workflows/: ci.yml
api/: README.md
bindings/: README.md
bindings/include/: panther.h
crates/panther-agents/: Cargo.toml
crates/panther-agents/src/: lib.rs
crates/panther-ai-eval/: Cargo 2.toml  Cargo.toml
crates/panther-ai-eval/src/: main.rs
crates/panther-cli/: Cargo.toml
crates/panther-cli/src/: main.rs
crates/panther-core/: Cargo.toml
crates/panther-core/src/: lib.rs
crates/panther-domain/: Cargo.toml
crates/panther-domain/src/: lib.rs
crates/panther-ffi/: Cargo.toml
crates/panther-ffi/src/: lib.rs
crates/panther-metrics/: Cargo.toml
crates/panther-metrics-content/: Cargo.toml
crates/panther-metrics-content/src/: lib.rs
crates/panther-metrics/src/: lib.rs
crates/panther-observability/: Cargo.toml
crates/panther-observability/src/: lib.rs
crates/panther-providers/: Cargo.toml
crates/panther-providers/src/: lib.rs
crates/panther-py/: Cargo.toml
crates/panther-py/src/: lib.rs
crates/panther-sandbox/: Cargo.toml
crates/panther-sandbox/tests/: validation_tests.rs
crates/panther-storage/: Cargo.toml
crates/panther-storage-sled/: Cargo.toml
crates/panther-storage-sled/src/: lib.rs
crates/panther-storage/src/: lib.rs
crates/panther-validation/: Cargo.toml
crates/panther-validation/examples/: validate_llms.rs
crates/panther-validation/guidelines/: anvisa.json
crates/panther-validation/src/: lib.rs
crates/panther-wasm/: Cargo.toml
crates/panther-wasm/src/: lib.rs
docs/: AGENTS.md  ARCHITECTURE.md  FAQ.md  STATUS.md  panther_features_todo 2.yaml
docs/contracts/: ProofRegistry.sol
docs/dashboards/: panther_agents_dashboard.json  panther_validation_dashboard.json
docs/images/: README.md
docs/media/: README.md
docs/monitoring/: alerts.yml  prometheus.yml
docs/monitoring/grafana/provisioning/dashboards/: dashboard.yml
panthersdk/: Cargo.toml
panthersdk/src/: lib.rs  main.rs
panthersdk/src/api/: fastapi_app.rs  mod.rs  python_bindings.rs
panthersdk/src/domain/: bias.rs  integration.rs  metrics.rs  runtime.rs  storage.rs  testgen.rs
panthersdk/src/ffi/flutter/: README.md
panthersdk/src/ffi/kotlin/: README.md
panthersdk/src/ffi/react_native/: README.md
panthersdk/src/ffi/swift/: README.md
panthersdk/src/infrastructure/: db_adapter.rs  grafana_adapter.rs  integration.rs  prometheus_adapter.rs
python/: pyproject.toml
python/panthersdk/: api.py  core.py
python/panthersdk/routes/: agents.py  health.py  metrics.py  proof.py  validation.py
python/tests/: test_api_basic.py  test_api_validation_proof.py
samples/: README.md
samples/data/: eval_sample.csv  eval_sample.jsonl  providers.example.csv  providers.example.json  rag_index.jsonl  rag_prompts.jsonl
samples/flutter/: GENERATE_PROJECT.sh  README.md
samples/flutter/lib/: ffi.dart  main.dart
samples/flutter/scripts/: build_rust.sh
samples/guidelines/: anvisa_method_validation.example.json
samples/kotlin/: MainActivity.kt  PantherBridge.kt  README.md
samples/kotlin/android/: build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
samples/kotlin/android/app/: build.gradle  build.gradle.kts
samples/kotlin/android/app/src/main/: AndroidManifest.xml
samples/kotlin/android/app/src/main/cpp/: CMakeLists.txt  panther_jni.c
samples/kotlin/android/app/src/main/java/com/example/panther/: MainActivity.kt  PantherBridge.kt  PantherSDK 2.kt  PantherSDK.kt
samples/kotlin/jni/: panther_jni.c
samples/kotlin/scripts/: build_rust.sh
samples/react_native/: AppSample 2.tsx  AppSample.tsx  GENERATE_PROJECT.sh  Panther.ts  README.md  typings.d.ts
samples/react_native/android/: PantherModule.java  panther_jni.c
samples/react_native/ios/: PantherModule.m
samples/react_native/scripts/: build_rust.sh
samples/swift/: Bridging-Header.h  GENERATE_PROJECT.sh  Info.plist  PantherSDKBridge.swift  README.md  Sample.swift  project.yml
samples/swift/PantherSDKSampleIOS/: README.md
samples/swift/PantherSDKSampleIOS/PantherSDKSampleIOS/: App.swift  AppSession.swift  Components.swift  ContentView.swift  HelpView.swift  HelperView.swift  MetricsView.swift  Models.swift  PantherBridge.swift  RootTabs.swift
samples/swift/PantherSDKSampleIOS/PantherSDKSampleIOS.xcodeproj/: project.pbxproj
samples/swift/PantherSDKSampleIOS/xcframework/: README.md
samples/swift/PantherSampleSwift.xcodeproj/: project.pbxproj
samples/swift/PantherSampleSwift.xcodeproj/xcshareddata/xcschemes/: PantherSampleSwift.xcscheme
samples/swift/Sources/: Bridging-Header.h  ContentView.swift  PantherSDK.swift  PantherSDKBridge.swift  PantherSampleSwiftApp.swift
samples/swift/frameworkIOS/: README.md
samples/swift/frameworkIOS/PantherSDKIOS.xcframework/: Info.plist
samples/swift/frameworkIOS/PantherSDKIOS.xcframework/ios-arm64-simulator/Headers/: panther.h
samples/swift/include/: panther.h
samples/swift/scripts/: build_rust.sh
scripts/: ios_refresh_framework.sh
scripts/release/: _common.sh  all.sh  build_android_aar.sh  build_ios_xcframework.sh  build_python_wheel.sh  build_wasm_pkg.sh  checksum_and_manifest.sh  package_headers.sh
