[workspace]
members = [
    "crates/panther-domain",
    "crates/panther-core",
    "crates/panther-providers",
    "crates/panther-observability",
    "crates/panther-ffi",
    "crates/panther-metrics",
    "crates/panther-storage",
    "crates/panther-storage-sled",
    "panthersdk",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "UNLICENSED"
version = "0.1.0"
authors = ["PantherSDK Team"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
ffi-support = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
