[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "panthersdk"
version = "0.1.0"
description = "PantherSDK Python API layer (FastAPI)"
authors = [{name = "PantherSDK Team"}]
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.111",
    "uvicorn>=0.30",
    "pydantic>=2.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest", "ruff", "mypy"]

[tool.setuptools.packages.find]
where = ["."]

