[package]
name = "panther-agents"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
panther-validation = { path = "../panther-validation", default-features = false }
panther-providers = { path = "../panther-providers", default-features = false }
panther-domain = { path = "../panther-domain" }
once_cell = "1"

[features]
default = []
# Pass-through feature flags similar to FFI/validation. These forward
# to dependencies’ features; panther-validation is always present.
validation-openai = ["panther-validation/openai", "panther-providers/openai"]
validation-ollama = ["panther-validation/ollama", "panther-providers/ollama"]
validation-async = []
validation-openai-async = ["panther-validation/openai-async", "panther-providers/openai-async"]
validation-ollama-async = ["panther-validation/ollama-async", "panther-providers/ollama-async"]
blockchain-eth = ["panther-validation/blockchain-eth"]
