[package]
name = "panther-ai-eval"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
panther-validation = { path = "../panther-validation", default-features = false, features = ["openai", "ollama"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1"
panther-providers = { path = "../panther-providers" }
panther-domain = { path = "../panther-domain" }
panthersdk = { path = "../../panthersdk" }
itertools = "0.12"

[features]
default = ["openai", "ollama"]
openai = []
ollama = []
