[package]
name = "panther-cli"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
tokio.workspace = true
clap = { version = "4.5", features = ["derive"] }
panther-validation = { path = "../panther-validation", default-features = false, features = ["openai", "ollama"] }
reqwest = { version = "0.12", features = ["json", "blocking"] }

[features]
default = ["openai", "ollama"]
openai = []
ollama = []
