[package]
name = "panther-ffi"
version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
anyhow.workspace = true
once_cell.workspace = true
ffi-support.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
panther-domain = { path = "../panther-domain" }
panther-core = { path = "../panther-core" }
panther-providers = { path = "../panther-providers" }
panther-observability = { path = "../panther-observability" }
panthersdk = { path = "../../panthersdk" }

[features]
default = []
metrics-inmemory = ["dep:panther-metrics"]
storage-inmemory = ["dep:panther-storage"]
storage-sled = ["dep:panther-storage-sled"]
metrics = ["metrics-inmemory"]
storage = ["storage-inmemory"]
observability = []

[dependencies.panther-metrics]
path = "../panther-metrics"
optional = true

[dependencies.panther-storage]
path = "../panther-storage"
optional = true

[dependencies.panther-storage-sled]
path = "../panther-storage-sled"
optional = true
