[package]
name = "panther-providers"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
panther-domain = { path = "../panther-domain" }
async-trait = "0.1"

[features]
default = []
openai = ["dep:reqwest"]
ollama = ["dep:reqwest"]
openai-async = ["dep:reqwest"]
ollama-async = ["dep:reqwest"]

[dependencies.reqwest]
version = "0.12"
features = ["json", "blocking"]
optional = true
