[package]
name = "panther-validation"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = "0.1"
panther-domain = { path = "../panther-domain" }
panther-providers = { path = "../panther-providers" }
sha3 = "0.10"
hex = "0.4"

[features]
default = []
openai = ["panther-providers/openai"]
ollama = ["panther-providers/ollama"]

[[example]]
name = "validate_llms"
path = "examples/validate_llms.rs"
