[package]
name = "panther-validation"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait = "0.1"
futures = "0.3"
panther-domain = { path = "../panther-domain" }
panther-providers = { path = "../panther-providers" }
sha3 = "0.10"
hex = "0.4"

[features]
default = []
openai = ["panther-providers/openai"]
ollama = ["panther-providers/ollama"]
openai-async = ["panther-providers/openai-async"]
ollama-async = ["panther-providers/ollama-async"]
blockchain-eth = ["dep:ethers"]

[[example]]
name = "validate_llms"
path = "examples/validate_llms.rs"

[dependencies.ethers]
version = "2"
default-features = false
# Keep features minimal to avoid feature name mismatches during resolution
# when `blockchain-eth` is not enabled. Expand as needed when enabling.
features = []
optional = true
